# email-mcp

./: .gitignore  Cargo.toml  README.md  test_auth.py  test_icloud_only.py  test_icloud_outlook.py
.github/workflows/: release.yml
npm/: index.js  package.json
npm-darwin-arm64/: package.json
npm-darwin-x64/: package.json
npm-linux-arm64/: package.json
npm-linux-x64/: package.json
npm-win32-x64/: package.json
src/: config.rs  gmail.rs  icloud.rs  main.rs  mcp.rs  oauth.rs  outlook.rs  tools.rs
