[package]
name = "email-mcp"
version = "0.1.3"
edition = "2021"
description = "Multi-account email MCP for Gmail, Outlook, and iCloud"
license = "MIT"

[[bin]]
name = "email-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
urlencoding = "2"
async-imap = { version = "0.9", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "1"
futures = "0.3"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
